Dan fait plus rien

--- a/MVCApplicationRent/Views/Material/Index.cshtml
+++ b/MVCApplicationRent/Views/Material/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Material";
 }
 
-<h2>Index</h2>
+<h2>Material</h2>
 
 <p>
     @Html.ActionLink("Create a new material", "AddMaterial")
