--- a/MVCApplicationRent/Views/Rent/Index.cshtml
+++ b/MVCApplicationRent/Views/Rent/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Rent";
 }
 
-<h2>Index</h2>
+<h2>Rent</h2>
 
 <p>
     @Html.ActionLink("Create New", "AddRent")
@@ -35,10 +35,10 @@
             @Html.DisplayFor(modelItem => item.Material.Name)
         </td>
         <td>
-            @item.BeginDate.Date.ToString("dd/MM/yyyy")
+            @item.BeginDate.Date.ToString("yyyy/MM/dd")
         </td>
         <td>
-            @item.EndDate.Date.ToString("dd/MM/yyyy")
+            @item.EndDate.Date.ToString("yyyy/MM/dd")
         </td>
         <td>
             @Html.ActionLink("Edit", "EditRent", new { id=item.Id }) |
