--- a/MVCApplicationRent/Views/Client/Index.cshtml
+++ b/MVCApplicationRent/Views/Client/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<DTO.Client>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "All Clients";
 }
 
-<h2>Client</h2>
+<h2>All Clients</h2>
 
 <p>
     @Html.ActionLink("Create a new client", "AddClient")
