--- a/MVCApplicationRent/Views/Material/Index.cshtml
+++ b/MVCApplicationRent/Views/Material/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<DTO.Material>
 
 @{
-    ViewBag.Title = "Material";
+    ViewBag.Title = "All Materials";
 }
 
-<h2>Material</h2>
+<h2>All Materials</h2>
 
 <p>
     @Html.ActionLink("Create a new material", "AddMaterial")
