--- a/MVCApplicationRent/Views/Rent/Index.cshtml
+++ b/MVCApplicationRent/Views/Rent/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<DTO.Rent>
 
 @{
-    ViewBag.Title = "Rent";
+    ViewBag.Title = "All Rents";
 }
 
-<h2>Rent</h2>
+<h2>All Rents</h2>
 
 <p>
     @Html.ActionLink("Create New", "AddRent")
