--- a/MVCApplicationRent/Views/Shared/_Layout.cshtml
+++ b/MVCApplicationRent/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - Mon application ASP.NET</title>
+    <title>@ViewBag.Title - Reservation of Material</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -17,11 +17,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Clivaz Sport", "Index", "Client", new { area = "" }, new { @class = "navbar-brand" })
+                <img src="~/Content/Images/icon.png" class="img-center" height="50" width="50" /> 
+                @Html.ActionLink("iSports", "Index", "Client", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Rent", "Index", "Rent")</li>
+                    <li>@Html.ActionLink("Rents", "Index", "Rent")</li>
                     <li>@Html.ActionLink("Clients", "Index", "Client")</li>
                     <li>@Html.ActionLink("Materials", "Index", "Material")</li>
                 </ul>
@@ -32,7 +33,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Daniel De Girolamo, Patrick Clivaz</p>
         </footer>
     </div>
 
